src/objects/MT_MediaCampaign__c.object
<CustomObject>
    <description>Planungsgrundlage für die Ausstrahlung eines Teils (oder des gesamten) BMV eines Restwerbeplatzvertrags. Enthält Informationen zur Ausstrahlung und Umsätzen, um die Planung und späteres Ranking zu ermöglichen.</description>
    <fields>
        <fullName>MT_ActualMonthlyBMV_sum__c</fullName>
        <description>Die Summe des über die Monat(splän)e ausgestrahlten Volumens.</description>
        <label>Sum of BMV Monthly Plan</label>
        <summarizedField>MT_MediaCampaignMonthlyPlan__c.MT_SumBMV__c</summarizedField>
        <summaryForeignKey>MT_MediaCampaignMonthlyPlan__c.MT_MediaCampaign_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_BMVDooH__c</fullName>
        <description>Das BMV DooH, das in dieser Kampagne ausgestrahlt werden soll.</description>
        <label>BMV DooH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BarterYield__c</fullName>
        <description>Der ermittelte Barter-Yield für diese Kampagne (Netto-Barter-Volumen / BMV TV)</description>
        <formula>IF(MT_BmvTv__c = 0, 0, MT_NetBarterVolume__c / MT_BmvTv__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barter Yield</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_BmvDigital__c</fullName>
        <description>Das BMV Digital, das in dieser Kampagne ausgestrahlt werden soll.</description>
        <label>BMV Digital</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BmvTotalFix__c</fullName>
        <description>Das BMV Gesamt, das in dieser Kampagne ausgestrahlt werden soll, ermittelt als Summe aus den drei Bausteinen TV, Digital und DooH.</description>
        <formula>MT_BmvTv__c + MT_BmvDigital__c + MT_BMVDooH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV gesamt</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BmvTvAsset__c</fullName>
        <description>Der Anteil des internen Partners am BMV, ermittelt aus BMV TV abzüglich des Anteils des externen Partners.</description>
        <formula>MT_BmvTv__c - MT_BmvTvCustomerIntegration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV TV Asset</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BmvTvCustomerIntegration__c</fullName>
        <description>Die Höhe des BMV des externen Partners an dieser Kampagne.</description>
        <label>BMV TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BmvTv__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Working value for the BMV (TV). Copied from the Opp Approval until approval is done, afterwards source of truth.</description>
        <label>BMV gesamt (TV)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_CashZahlung__c</fullName>
        <description>Die Cash-Zahlung des externen Partners in Ergänzung zum Equity-Anteil.</description>
        <label>Cash Zahlung</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_ContractEnddate__c</fullName>
        <description>Das Ende der vertraglichen Laufzeit für diese Kampagne. Die benötigten Monatspläne zu der Kampagne werden anhand dieses Datums ermittelt und per Trigger erstellt.</description>
        <label>Vertragsende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_ContractStartdate__c</fullName>
        <description>Der Anfang der vertraglichen Laufzeit für diese Kampagne. Die benötigten Monatspläne zu der Kampagne werden anhand dieses Datums ermittelt und per Trigger erstellt.</description>
        <label>Vertragsbeginn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_EigenerBuchwertinEUR__c</fullName>
        <description>Der Anteil am Unternehmen des externen Partners.</description>
        <label>Eigenkapital Buchwert</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_ExitParticipation__c</fullName>
        <description>Der prozentuale Anteil am BMV, der beim Ausstieg erzielt wird.</description>
        <label>Exit Participation</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_FillUp__c</fullName>
        <description>Fill Up-Yield, der für diese Kampagne vereinbart wurde.</description>
        <label>Fill-Up</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_FixRevenue_MonthlyPayment__c</fullName>
        <description>Eingabemöglichkeit für die fixe monatliche Zahlung, falls bei fixer Umsatzart &quot;Zahlung&quot; ausgewählt wurde.</description>
        <label>Fixe monatliche Einnahmen</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_FixRevenue_Type__c</fullName>
        <description>Die fixe Umsatzart, die in dieser Kampagne zum Tragen kommt: Keine, Yield oder Zahlung.</description>
        <label>Fixe Umsatzart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_FixRevenueTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_FixRevenue_Yield__c</fullName>
        <description>Liefert den Fix Yield, falls bei fixer Umsatzart &quot;Yield&quot; ausgewählt wurde, sonst 0.</description>
        <formula>IF(ISPICKVAL(MT_FixRevenue_Type__c, &quot;Yield&quot;), MT_YieldGesamtFixTV__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixer Umsatz Yield (TV)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_GrossBarterVolume__c</fullName>
        <description>Das Brutto-Barter-Volumen zur Dokumentation. Weitere Berechnungen erfolgen mit dem Netto-Barter-Volumen.</description>
        <label>Brutto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_HasMediaDigital__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Aktiviert den Baustein Digital für diese Kampagne.</description>
        <label>Digital (71M)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_HasMediaDooH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Aktiviert den Baustein DooH für diese Kampagne.</description>
        <label>DooH (7Screen)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_HasMediaTV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Aktiviert den Baustein TV für diese Kampagne.</description>
        <label>TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_IMAMail__c</fullName>
        <description>Wird per Prozess gefüllt, enthält die E-Mail- Adresse aus dem zugehörigen Asset (Kampagnentyp -&gt; Asset), um bei Anlage einer internen Kampagne eine Informationsmail zu schicken.</description>
        <label>IMA Verteiler</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MT_IsContractSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VERALTET: Muss auf die Opportunity Freigabe verschoben werden, da diese den Gesamtvertrag abbildet.

Alt:
Zeigt an, dass der Vertrag unterschrieben wurde. Darf nur gesetzt werden, wenn die Kampagne vorher freigegeben wurde.</description>
        <label>Contract signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_IsOverbooking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Aktiviert die Felder zur Pflege von Overbooking in der Flightplanung. Kann nur bei internen Kampagnen gesetzt werden.</description>
        <label>Overbooking?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_KRSID__c</fullName>
        <description>Enthält die ID aus dem Altsystem (KRS), wird beim Import befüllt.</description>
        <externalId>true</externalId>
        <label>KRS ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MT_MediaCampaignType_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Der Typ dieser Kampagne. Steuert Konfigurationsparameter, z.B. Gewichtungsfaktoren, bei.</description>
        <label>Media Campaign Type</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2) OR (3 AND 4)) AND 5</booleanFilter>
            <errorMessage>Der ausgewählte Kampagnentyp ist inaktiv oder passt nicht zur Kampagne.</errorMessage>
            <filterItems>
                <field>MT_MediaCampaignType__c.MT_Type__c</field>
                <operation>equals</operation>
                <value>Internal</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Media Campaign</value>
            </filterItems>
            <filterItems>
                <field>MT_MediaCampaignType__c.MT_Type__c</field>
                <operation>equals</operation>
                <value>External</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>External Media Campaign</value>
            </filterItems>
            <filterItems>
                <field>MT_MediaCampaignType__c.MT_IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MT_MediaCampaignType__c</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>Media_Campaigns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Mn3TvCustomerIntegration__c</fullName>
        <description>Das MN3, das der externe Partner für den TV- Anteil zahlt.</description>
        <label>MN3 TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_NetBarterVolume__c</fullName>
        <description>Das Netto-Barter-Volumen, auf Basis dessen der Yield ermittelt wird.</description>
        <label>Netto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_HasMediaBarter__c</fullName>
        <description>Zeigt an, ob Barter auf der Opportunity Freigabe aktiviert ist. Wird in weiteren Formeln und im Businessplan verwendet, um Informationen zum Barter anzuzeigen.</description>
        <formula>MT_OpportunityApproval_ref__r.P7S1_HasMediaBarter__c</formula>
        <label>Barter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_HasMediaPartBarter__c</fullName>
        <description>Zeigt an, ob Teil-Barter auf der Opportunity Freigabe aktiviert ist. Wird in weiteren Formeln und im Businessplan verwendet, um Informationen zum Barter anzuzeigen.</description>
        <formula>MT_OpportunityApproval_ref__r.P7S1_HasMediaPartBarter__c</formula>
        <label>Teil-Barter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_OpportunityApprovalStatus__c</fullName>
        <description>Liefert den aktuellen Freigabestatus der Opportunity Freigabe, zur einfacheren Verarbeitung in Apex- Klassen.</description>
        <formula>TEXT(MT_OpportunityApproval_ref__r.P7S1_ApprovalState__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_OpportunityApproval_ref__c</fullName>
        <description>Die Referenz zur Opportunity Freigabe, muss mit der referenzierten Opportunity übereinstimmen.</description>
        <label>Opportunity Freigabe</label>
        <referenceTo>P7S1_OpportunityApproval__c</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>Media_Campaigns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT_Opportunity_AccountId__c</fullName>
        <description>Die ID des Accounts, zu dem die Opportunity gehört, wird im Flightplan verwendet, um die neu angelegten Produkte richtig zuzuordnen.</description>
        <formula>CASESAFEID(MT_Opportunity_ref__r.AccountId)</formula>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_Opportunity_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Die Opportunity, zu der die Kampagne gehört. Per Validierungsregel wird sichergestellt, dass die Opportunity und Opportunity Freigabe zueinander gehören. Aus der Opportunity werden weitere Informationen gezogen, der Zugriff wird mit der direkten Referenz vereinfacht.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>Media_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_PlannedMonthlyBMV_sum__c</fullName>
        <description>Die Summe des geplanten BMV aus den Monatsplänen.</description>
        <label>Planned Amount</label>
        <summarizedField>MT_MediaCampaignMonthlyPlan__c.MT_TotalBMV__c</summarizedField>
        <summaryForeignKey>MT_MediaCampaignMonthlyPlan__c.MT_MediaCampaign_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_PlannedMonthlySponsoringBMV_sum__c</fullName>
        <description>Die Summe des geplanten Sponsoring- BMV aus den Monatsplänen.</description>
        <label>Sponsoring Gesamt Geplantes BMV</label>
        <summarizedField>MT_MediaCampaignMonthlyPlan__c.MT_BMVSponsoring__c</summarizedField>
        <summaryForeignKey>MT_MediaCampaignMonthlyPlan__c.MT_MediaCampaign_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_PlannedMonthlySpotBmv__c</fullName>
        <description>Summe des geplanten Spot- BMV aus den Monatsplänen.</description>
        <label>Spot Gesamt Geplantes BMV</label>
        <summarizedField>MT_MediaCampaignMonthlyPlan__c.MT_BMVSpot__c</summarizedField>
        <summaryForeignKey>MT_MediaCampaignMonthlyPlan__c.MT_MediaCampaign_ref__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT_Responsible_IM_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Der für diese Kampagne verantwortliche Benutzer von der IMA. Wird für Approval Prozesse und Benachrichtigungen im Flightplan verwendet.</description>
        <label>Internal Media Agency Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only users with the P7S1 Internal Agency role can be responsible internal media agents for a campaign.</errorMessage>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>P7S1_InternalAgency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>MT_ResponsibleForMediaCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_RunTimeTVEnd__c</fullName>
        <description>Ende des Ausstrahlungszeitraums für den TV- Baustein.</description>
        <label>Ende Laufzeit (TV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_RunTimeTVStart__c</fullName>
        <description>Start des Ausstrahlungszeitraums für den TV- Baustein.</description>
        <label>Start Laufzeit (TV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_SYS_AccountOwnerUnit__c</fullName>
        <description>VERALTET: Wird nicht mehr benötigt und kann gelöscht werden, zusammen mit dem Prozess zur Befüllung. Die Kampagne erbt durch das Master/Detail zur Opportunity Freigabe die Sichtbarkeitseinstellungen.

Alt:
Enthält die Unit des über die Opportunity zugeordneten Account- Inhabers. Wird per Prozess gefüllt und für die Aktivierung des Sharings genutzt.</description>
        <label>Sys Account Owner Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_SpotAssetanteil__c</fullName>
        <description>Der prozentuale Anteil des internen Partners an der Motivlänge, ermittelt aus 100% abzüglich des Anteils des externen Partners.</description>
        <formula>1 - MT_SpotKundenintegrationsanteil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spot Assetanteil</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_SpotKundenintegrationsanteil__c</fullName>
        <description>Der prozentuale Anteil des externen Partners an der Motivlänge.</description>
        <formula>IF(MT_TvSpotLength__c = 0, 0, (MT_TvSpotLengthCustomer__c / MT_TvSpotLength__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spot Kundenintegrationsanteil</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Status__c</fullName>
        <description>Der aktuelle Status der Kampagne (Entwurf, Freigegeben, Abgeschlossen, Abgebrochen)</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planning final</fullName>
                </value>
                <value>
                    <fullName>Campaign approved</fullName>
                </value>
                <value>
                    <fullName>Campaign changed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Approvals</fullName>
                </value>
                <value>
                    <fullName>Contract signed</fullName>
                    <isActive>false</isActive>
                    <label>Contract signed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_Sys_BuildingBlockMatrix__c</fullName>
        <description>VERALTET: Kann gelöscht werden. Die Prüfung im Trigger steuert aktuell ausschließlich die Anlage des initialen TV- Zielvorgaben- Datensatzes, eine Löschung sollte aus vertraglichen Gründen nicht möglich sein. Daher wird auch dieses Felder nicht mehr benötigt.

Alt:
Stellt einen dreistelligen Zahlencode bereit, mit dem identifiziert wird, welche Bausteine auf der Kampagne aktiviert sind. Bei Änderungen an diesem Code wird Triggerlogik ausgeführt, die die Bausteine anlegt / löscht.</description>
        <formula>IF( MT_HasMediaTV__c , &apos;1&apos;, &apos;0&apos;)+ IF(  MT_HasMediaDigital__c  , &apos;1&apos;, &apos;0&apos;) + IF(  MT_HasMediaDooH__c  , &apos;1&apos;, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT_Sys_BuildingBlockMatrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_Sys_ContractOrTVRuntimeEnd__c</fullName>
        <description>Liefert das Ende der Vertragslaufzeit oder, falls dieses leer ist, das Ende der TV Laufzeit. Wird genutzt, da die Vertragslaufzeit optional ist, um für die Erstellung der Monatspläne einen Endzeitpunkt zu haben.</description>
        <formula>IF(ISBLANK(MT_ContractEnddate__c), MT_RunTimeTVEnd__c, MT_ContractEnddate__c)</formula>
        <label>Sys Contract Or TV Runtime End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_Sys_ContractOrTVRuntimeStart__c</fullName>
        <description>Liefert den Beginn der Vertragslaufzeit oder, falls diese leer ist, den Beginn der TV Laufzeit. Wird genutzt, da die Vertragslaufzeit optional ist, um für die Erstellung der Monatspläne einen Startzeitpunkt zu haben.</description>
        <formula>IF(ISBLANK(MT_ContractStartdate__c), MT_RunTimeTVStart__c, MT_ContractStartdate__c)</formula>
        <label>Sys Contract Or TV Runtime Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_Sys_OppApp_ID__c</fullName>
        <description>Contains the ID of the related opportunity approval. Unique to prevent an opportunity approval from having multiple media campaigns.</description>
        <label>Sys Opportunity Approval ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MT_Sys_OppApp_OpportunityRefId__c</fullName>
        <description>Liefert die ID der von der Opportunity Freigabe referenzierten Opportunity. Wird genutzt, um diese Referenz per Triggerlogik ebenfalls in der Kampagne zu hinterlegen.</description>
        <formula>MT_OpportunityApproval_ref__r.P7S1_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys OppApp OpportunityRefId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_TvSpotLengthAsset__c</fullName>
        <description>Anteil des internen Partners an der Motivlänge, ermittelt aus der Gesamtlänge abzüglich des Anteils des externen Partners.</description>
        <formula>MT_TvSpotLength__c - MT_TvSpotLengthCustomer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assetanteil Spotlänge (in Sekunden)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_TvSpotLengthCustomer__c</fullName>
        <description>Der Anteil des externen Partners an der Motivlänge.</description>
        <label>Kundenanteil Spotlänge (in Sekunden)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_TvSpotLength__c</fullName>
        <description>Die Länge der Motive, die bei dieser Kampagne ausgestrahlt werden sollen.</description>
        <label>Gesamtspotlänge (in Sekunden)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Type__c</fullName>
        <description>Liefert den Namen des referenzierten Kampagnentypen, zur Vereinfachung der Einbindung (z.B. in Cockpit- Seiten, die nur die Kampagne laden).</description>
        <formula>MT_MediaCampaignType_ref__r.Name</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_RevenuePerUnit__c</fullName>
        <description>Der vereinbarte Umsatz pro Einheit für die Umsatzbeteiligungskomponente 1.</description>
        <label>Var. Umsatz 1 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldAmount__c</fullName>
        <description>Die erwartete Anzahl verkaufter Einheiten für die Umsatzbeteiligungskomponente 1.</description>
        <label>Var. Umsatz 1 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldProduct__c</fullName>
        <description>Die Bezeichnung des verkauften Produkts für die Umsatzbeteiligungskomponente 1.</description>
        <label>Var. Umsatz 1 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldUnit__c</fullName>
        <description>Die Verkaufseinheit für die Umsatzbeteiligungskomponente 1.</description>
        <label>Var. Umsatz 1 - Verkaufseinheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_ProductSalesUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_TotalRevenue__c</fullName>
        <description>Der berechnete Gesamtumsatz für die Umsatzbeteiligungskomponente 1.</description>
        <formula>MT_VariableRevenue1_RevenuePerUnit__c * MT_VariableRevenue1_SoldAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 1 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_RevenuePerUnit__c</fullName>
        <description>Der vereinbarte Umsatz pro Einheit für die Umsatzbeteiligungskomponente 2.</description>
        <label>Var. Umsatz 2 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldAmount__c</fullName>
        <description>Die erwartete Anzahl verkaufter Einheiten für die Umsatzbeteiligungskomponente 2.</description>
        <label>Var. Umsatz 2 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldProduct__c</fullName>
        <description>Die Bezeichnung des verkauften Produkts für die Umsatzbeteiligungskomponente 2.</description>
        <label>Var. Umsatz 2 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldUnit__c</fullName>
        <description>Die Verkaufseinheit für die Umsatzbeteiligungskomponente 2.</description>
        <label>Var. Umsatz 2 - Verkaufseinheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_ProductSalesUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_TotalRevenue__c</fullName>
        <description>Der berechnete Gesamtumsatz für die Umsatzbeteiligungskomponente 2.</description>
        <formula>MT_VariableRevenue2_RevenuePerUnit__c * MT_VariableRevenue2_SoldAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 2 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_RevenuePerUnit__c</fullName>
        <description>Der vereinbarte Umsatz pro Einheit für die Umsatzbeteiligungskomponente 3.</description>
        <label>Var. Umsatz 3 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldAmount__c</fullName>
        <description>Die erwartete Anzahl verkaufter Einheiten für die Umsatzbeteiligungskomponente 3.</description>
        <label>Var. Umsatz 3 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldProduct__c</fullName>
        <description>Die Bezeichnung des verkauften Produkts für die Umsatzbeteiligungskomponente 3.</description>
        <label>Var. Umsatz 3 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldUnit__c</fullName>
        <description>Die Verkaufseinheit für die Umsatzbeteiligungskomponente 3.</description>
        <label>Var. Umsatz 3 - Verkaufseinheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_ProductSalesUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_TotalRevenue__c</fullName>
        <description>Der berechnete Gesamtumsatz für die Umsatzbeteiligungskomponente 3.</description>
        <formula>MT_VariableRevenue3_RevenuePerUnit__c * MT_VariableRevenue3_SoldAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 3 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue_ConsiderationPeriod__c</fullName>
        <description>Der ausgewählte Betrachtungszeitraum für den variablen Yield. Steuert die Berechnung des Yields in Kampagnen, in denen die Umsatzbeteiligung nicht monatlich abgerechnet wird.</description>
        <label>Betrachtungszeitraum Variabler Yield</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_YieldConsiderationPeriods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_YieldGesamtFixTV__c</fullName>
        <description>Berechnet den Gesamt-Yield für TV (MN3 / BMV)</description>
        <formula>IF(MT_BmvTv__c = 0, 0, (MT_Mn3TvCustomerIntegration__c / MT_BmvTv__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield gesamt fix (TV)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>Media Transparency Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MT_ContractStartdate__c</columns>
        <columns>MT_ContractEnddate__c</columns>
        <columns>MT_RunTimeTVStart__c</columns>
        <columns>MT_RunTimeTVEnd__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Kampagnenname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Transparency Campaigns</pluralLabel>
    <recordTypes>
        <fullName>MT_ExternalMediaCampaign</fullName>
        <active>true</active>
        <label>External Media Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>MT_InternalMediaCampaign</fullName>
        <active>true</active>
        <label>Internal Media Campaign</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MT_AssetMatch_CampType_vs_OppApp</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
  ISBLANK(MT_OpportunityApproval_ref__r.MT_Asset_ref__c),
  TEXT(MT_OpportunityApproval_ref__r.P7S1_internerPartner__c) &lt;&gt; MT_MediaCampaignType_ref__r.MT_Asset_ref__r.Name,
  MT_OpportunityApproval_ref__r.MT_Asset_ref__c &lt;&gt; MT_MediaCampaignType_ref__r.MT_Asset_ref__c
)</errorConditionFormula>
        <errorDisplayField>MT_MediaCampaignType_ref__c</errorDisplayField>
        <errorMessage>Der Kampagnentyp muss zum gleichen Asset gehören wie der interne Partner auf der Opportunity Freigabe.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_CampaignInContract</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
NOT ( ISBLANK ( MT_ContractStartdate__c ) ),
NOT ( ISBLANK ( MT_ContractEnddate__c ) ),
OR(
MT_OpportunityApproval_ref__r.P7S1_OppKampagnenstart__c &lt; MT_ContractStartdate__c ,
MT_OpportunityApproval_ref__r.P7S1_OppKampagnenende__c &gt; MT_ContractEnddate__c
)
)</errorConditionFormula>
        <errorMessage>Achtung Kampagnenlaufzeit muss innerhalb Vertragslaufzeit sein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_CheckIfCampaignOppAppIsApproved</fullName>
        <active>true</active>
        <description>Only allow the checkbox to be checked if Campaign Status is &quot;Campaign approved&quot; AND OpportunityApproval ApprovalState is &quot;Genehmigt&quot;</description>
        <errorConditionFormula>IF(AND(
ISPICKVAL(MT_Status__c,&quot;Campaign approved&quot;),
ISPICKVAL(MT_OpportunityApproval_ref__r.P7S1_ApprovalState__c ,&quot;Genehmigt&quot;)),
FALSE,IF(MT_IsContractSigned__c,NOT(ISCHANGED(MT_Status__c)),FALSE)
)</errorConditionFormula>
        <errorDisplayField>MT_IsContractSigned__c</errorDisplayField>
        <errorMessage>Sowohl die Kampagne als auch die Opportunity Freigabe muss genehmigt sein um dieses Feld zu ändern.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_LockCreateAndUpdateCampaign</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($Permission.MT_CreateAndUpdateCampaigns)</errorConditionFormula>
        <errorMessage>Only KRS import Users can create or update media campaigns.</errorMessage>
    </validationRules>
</CustomObject>